<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow"
        android:paddingTop="0.1dp"
        android:paddingBottom="0.1dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryDark"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="?attr/colorPrimaryDark"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/colorPrimaryDark"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:background="?attr/colorPrimaryDark"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txtNumberOfSides"
                                    android:layout_width="0dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:text="@string/how_many_coins_are_you_flipping"
                                    android:textColor="@color/gray_color"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnFlips1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_1"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_2"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_3"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_4"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_5"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_6"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnFlips7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_7"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_8"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_9"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_10"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_11"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btnFlips12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/small_btn_background"
                                android:text="@string/_12"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="40dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtSides1"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:layout_marginBottom="10dp"
                                android:gravity="start"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@color/gray_color"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtSides"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:textColor="@color/gray_color"
                                android:textColorHint="@color/gray_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtHeads1"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:layout_marginBottom="10dp"
                                android:gravity="start"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@color/gray_color"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtHeads"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:textColor="@color/gray_color"
                                android:textColorHint="@color/gray_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtTails1"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:layout_marginBottom="10dp"
                                android:gravity="start"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@color/gray_color"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtTails"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:textColor="@color/gray_color"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnFlip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="14dp"
                android:backgroundTint="@color/colorAccent"
                android:tint="?attr/colorPrimaryDark"
                app:srcCompat="@drawable/ic_baseline_refresh_24"
                tools:ignore="VectorDrawableCompat" />
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>