<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.BottomSheet">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_linear_scale_24"
        app:tint="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/generateTeams"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="8"
            android:src="@drawable/ic_baseline_refresh_24"
            app:tint="@color/colorPrimary"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/generate_teams"
            android:textColor="@color/gray_color"
            android:textSize="18sp"
            android:textStyle="normal"></TextView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/editList"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:src="@drawable/ic_baseline_edit_24"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/edit_list"
            android:textColor="@color/gray_color"
            android:textSize="18sp"
            android:textStyle="normal"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteList"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="8"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:tint="@color/colorPrimary"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/delete_list"
            android:textColor="@color/gray_color"
            android:textSize="18sp"
            android:textStyle="normal"></TextView>
    </LinearLayout>
</LinearLayout>